# vcml

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: asan.yml  cmake.yml  coverage.yml  lint.yml  macos.yml  nightly.yml  style.yml  unity.yml  windows.yml
cmake/: FindLibELF.cmake  FindLibElf.cmake  FindLibRFB.cmake  FindLibSLIRP.cmake  FindLibVNC.cmake  FindSystemC.cmake  GenVersionHeader.cmake  GenVersionInfo.cmake  Sanitizer.cmake  clang-format  clang-tidy
doc/: backends.md  build.md  components.md  logging.md  main.md  peripherals.md  properties.md  session.md  tracing.md
doc/models/: arm_gic400.md  arm_gicv2.md  arm_pl011.md  arm_pl190.md  arm_sp804.md  dma_pl330.md  fbdev.md  generic_bus.md  generic_mem.md  hwrng.md  infra_throttle.md  meta_loader.md  meta_simdev.md  meta_throttle.md  oc_ethoc.md  oc_ocfbc.md  oc_ockbd.md  oc_ocspi.md  oc_ompic.md  riscv_clint.md  riscv_plic.md  rtc1742.md  sdhci.md  sifive_uart.md  throttle.md  uart8250.md  virtio.md
include/: vcml.h
include/vcml/: adapters.h  command.h  component.h  dmi_cache.h  elf.h  exmon.h  master_socket.h  module.h  nic.h  peripheral.h  ports.h  processor.h  range.h  register.h  sbi.h  sd.h  setup.h  slave_socket.h  spi.h  stubs.h  system.h  txext.h  uart.h
include/vcml/audio/: driver.h  format.h  istream.h  ostream.h  stream.h
include/vcml/backends/: backend.h  backend_file.h  backend_null.h  backend_stdout.h  backend_tap.h  backend_tcp.h  backend_term.h
include/vcml/common/: aio.h  bitops.h  endian.h  includes.h  library.h  range.h  report.h  socket.h  strings.h  systemc.h  thctl.h  thread_pool.h  types.h  utils.h  version.h
include/vcml/core/: aio.h  bitops.h  command.h  component.h  fifo.h  library.h  model.h  module.h  ncurses.h  peq.h  peripheral.h  processor.h  range.h  register.h  report.h  setup.h  socket.h  strings.h  system.h  systemc.h  thctl.h  types.h  utils.h
include/vcml/debugging/: elf_reader.h  gdbarch.h  gdbserver.h  gdbstub.h  loader.h  rspserver.h  srec_reader.h  subscriber.h  suspender.h  symtab.h  target.h  vncserver.h  vspclient.h  vspserver.h
include/vcml/ethernet/: backend.h  bridge.h  gateway.h  network.h
include/vcml/logging/: inscight.h  log_file.h  log_stream.h  log_term.h  log_tui.h  logger.h  publisher.h  report.h
include/vcml/models/: deprecated.h
include/vcml/net/: adapter.h  backend.h  client.h
include/vcml/properties/: broker.h  broker_arg.h  broker_env.h  broker_file.h  broker_lua.h  property.h  property_base.h  property_provider.h  property_provider_arg.h  property_provider_env.h  property_provider_file.h  property_vector.h  property_void.h
include/vcml/protocols/: base.h  can.h  clk.h  eth.h  gpio.h  i2c.h  irq.h  lin.h  pci.h  pci_ids.h  rst.h  sd.h  serial.h  signal.h  spi.h  tlm.h  tlm_adapters.h  tlm_base.h  tlm_dmi_cache.h  tlm_exmon.h  tlm_host.h  tlm_memory.h  tlm_probe.h  tlm_sbi.h  tlm_sockets.h  tlm_stubs.h  usb.h  usb_sockets.h  usb_types.h  virtio.h
include/vcml/serial/: backend.h  port.h  terminal.h
include/vcml/tracing/: activity.h  protocol.h  tracer.h  tracer_file.h  tracer_inscight.h  tracer_term.h
include/vcml/ui/: codes.h  (+8 more)
patches/: systemc-2.3.3-01-mmap-for-asan.patch  systemc-2.3.3-02-valgrind-stacks.patch  systemc-2.3.3-03-tsan-api.patch  systemc-3.0.0_pub_rev_20231129-01-hierarchy-guard.patch  systemc-3.0.0_pub_rev_20231129-02-missing-install.patch
src/vcml/: component.cpp  dmi_cache.cpp  elf.cpp  exmon.cpp  master_socket.cpp  module.cpp  nic.cpp  peripheral.cpp  ports.cpp  processor.cpp  register.cpp  sbi.cpp  sd.cpp  setup.cpp  slave_socket.cpp  spi.cpp  stubs.cpp  system.cpp  uart.cpp
test/: CMakeLists.txt  test_aio.cpp  test_backend_tcp.cpp  test_bitops.cpp  test_component.cpp  test_dmi.cpp  test_elf.cpp  test_exmon.cpp  test_generic_bus.cpp  test_generic_memory.cpp  test_hello.cpp  test_logging.cpp  test_main.cpp  test_peripheral.cpp  test_plic.cpp  test_processor.cpp  test_property.cpp  test_range.cpp  test_register.cpp  test_riscv_clint.cpp  test_spi.cpp  test_utils.cpp  test_version.cpp  test_vnc.cpp  testing.cpp  testing.h
test/core/: CMakeLists.txt  adapter.cpp  aio.cpp  async.cpp  async_timer.cpp  backend_tcp.cpp  bitops.cpp  broker.cpp  can.cpp  clk.cpp  component.cpp  disk.cpp  display.cpp  dmi.cpp  drive.cpp  elf.c  elf.cpp  elf.elf  elf_reader.cpp  endian.cpp  eth.cpp  exmon.cpp  gpio.cpp  hello.cpp  hierarchy.cpp  i2c.cpp  irq.cpp  library.cpp  logging.cpp  lua.cpp  memory.cpp  model.cpp  module.cpp  pci.cpp  peq.cpp  peripheral.cpp  processor.cpp  property.cpp  range.cpp  register.cpp  (+23 more)
test/models/: CMakeLists.txt  arm_gic400.cpp  arm_gicv2m.cpp  arm_pl011.cpp  arm_sp804.cpp  arm_timer.cpp  can_mcan.cpp  dma_pl330.cpp  eth_lan9118.cpp  generic_bus.cpp  generic_fbdev.cpp  generic_memory.cpp  gpio_pl061.cpp  gpio_sifive.cpp  i2c_ads1015.cpp  i2c_opencores.cpp  i2c_sifive.cpp  infra_loader.cpp  lan9118.cpp  lin_gateway.cpp  m_can.cpp  max31855.cpp  meta_gdbserver.cpp  meta_loader.cpp  oci2c.cpp  pci_device.cpp  pcie_device.cpp  riscv_aclint.cpp  riscv_aplic.cpp  riscv_clint.cpp  riscv_iommu.cpp  riscv_plic.cpp  sd_sdhci.cpp  sdhci.cpp  serial_cdns.cpp  serial_nrf51.cpp  serial_pl011.cpp  serial_sifive.cpp  serial_sifive_uart.cpp  serial_uartlite.cpp  (+18 more)
test/resources/: elf.elf  sample.srec  shared.c  test.cfg  test.lua
test/sanitizer/: asan.suppress  lsan.suppress  tsan.suppress  ubsan.suppress
test/unit/: CMakeLists.txt  adapter.cpp  async.cpp  async_timer.cpp  audio.cpp  broker.cpp  can.cpp  clk.cpp  component.cpp  disk.cpp  display.cpp  dmi.cpp  eth.cpp  exmon.cpp  gpio.cpp  hello.cpp  hierarchy.cpp  i2c.cpp  lin.cpp  logging.cpp  lua.cpp  lua_broker.cpp  memory.cpp  model.cpp  module.cpp  pci.cpp  peq.cpp  peripheral.cpp  probe.cpp  processor.cpp  property.cpp  range.cpp  register.cpp  sbi.cpp  sc_report.cpp  sc_report_pub.cpp  sc_time.cpp  scsi.cpp  sd.cpp  serial.cpp  (+14 more)
utils/: CMakeLists.txt  format  format.py  gdbterm  lint  setup  setup-clang  setup-gcc  setup-msvc.ps1  setup-systemc  setup-vcml  tapctl.c  tapnet  tapnet.sh
(+443 files in other folders)
